--- a/3.html
+++ b/3.html
@@ -17,3 +17,4 @@
   감동적인 이야기가 펼쳐진다! 영상 시청은 <strong><u><a href="https://www.youtube.com/watch?v=w5S0GACgL3U&list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb&index=16">이 곳을</a></u></strong> 클릭하세요.
 </body>
 </head>
+</html>
