--- a/1.html
+++ b/1.html
@@ -12,7 +12,30 @@
     <li><a href="3.html">크리스마스</a></li>
   </ol>
 <h2>강릉 일지</h2>
-<img src="coding.jpg" width="100%">
-우리의 첫번째 여행은 강릉이다. <br>여행지를 정하기까지 많은 여정이 있었는데 너무 재밌어서 하루 더 머물었다. <br> 여러 일들이 있었는데 <a href="https://youtu.be/jZ13mFki1Nk" target="_blank" title="html5 specification">이 영상</a>을 보면 알 수 있다.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jZ13mFki1Nk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><p>
+</p>
+<img src="gangreung.jpg" width="80%">
+<p>우리의 첫번째 여행은 강릉이다.</p> 여행지를 정하기까지 많은 여정이 있었는데 너무 재밌어서 하루 더 머물었다. <br> 여러 일들이 있었는데 <a href="https://youtu.be/jZ13mFki1Nk" target="_blank" title="html5 specification">이 영상</a>을 보면 알 수 있다.
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://22century-2.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
